err/vyper-bot.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vyper'...
Compiling './lib/python3.5/site-packages/vyper/basebot.py'...
*** Sorry: IndentationError: expected an indented block (basebot.py, line 7)
Compiling './lib/python3.5/site-packages/vyper/log.py'...
***   File "./lib/python3.5/site-packages/vyper/log.py", line 36
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vyper/vyper.py'...
*** Sorry: IndentationError: unexpected indent (vyper.py, line 66)
Listing './lib/python3.5/site-packages/vyper/web'...
Listing './lib/python3.5/site-packages/vyper_bot-5.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
